--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    name: "beer_lib",
-    version: "1.0.0",
-    description: "Beer CRUD library",
-    main: "index.js",
-    scripts: {
-        test: "echo "Error: no test specified" && exit 1"
+    "name": "beer_lib",
+    "version": "1.0.0",
+    "description": "Beer CRUD library",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
-    author: "Bucky",
-    license: "ISC",
-    dependencies: {
-        firebase: "^4.10.0"
+    "author": "Bucky",
+    "license": "ISC",
+    "dependencies": {
+        "firebase": "^4.10.0"
     },
-    keywords: [
+    "keywords": [
     "Beer"
     ],
-    appkit: {
-        components: [
+    "appkit": {
+        "components": [
             {
-                name: "BlueButton",
-                script: "components/BlueButton.js"
+                "name": "BlueButton",
+                "script": "components/BlueButton.js"
             }
         ],
-        libs: [
+        "libs": [
             {
-                name: "beercrud",
-                script: "src/BeerData.js"
+                "name": "beercrud",
+                "script": "src/BeerData.js"
             }
         ]
     }
